# priv/static/swagger.json
@@ -127,8 +127,48 @@
             "application/json"
           ]
         ],
-        "responses": {},
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        },
         "summary": "List all todos",
+        "tags": [
+          "Todos"
+        ]
+      }
+    },
+    "/todos/:id": {
+      "get": {
+        "description": "Retrieve a specific todo item by its ID",
+        "operationId": "SleekFlowTodoWeb.TodoController.show",
+        "parameters": [
+          {
+            "description": "Todo ID",
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "x-example": "02ef07e0-eb4f-4fca-b6aa-c7993427cc10"
+          }
+        ],
+        "produces": [
+          [
+            "application/json"
+          ]
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Todo"
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "summary": "Show a specific todo",
         "tags": [
           "Todos"
         ]
